--- a/src/style.css
+++ b/src/style.css
@@ -7,20 +7,21 @@ body {
   background-color: black;
 }
 
-#video-container {
+#container {
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-#video-source {
+#camera-source {
   position: relative;
   display: none;
 }
 
 /* Make the canvas fill the viewport */
-#video-canvas {
+#camera-canvas,
+#overlay-canvas {
   position: absolute;
   top: 0;
   left: 0;
